footer__img-link

--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -948,19 +948,20 @@
 		</div>
 	</section>
 
+<footer class="footer container">
+	<div class="footer__top">
+		<a class="link logotype" width="126" height="53" href="#главная">
+			<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
+		</a>
 
+		<p class="text footer__text--smal">
+			Copyright © 2022 Bithoven.com.
+			All rights reserved.
+		</p>
 
-	<footer class="footer container">
-		<div class="footer__top">
-
-			<a class="link logotype" width="126" height="53" href="#главная">
-				<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
-			</a>
-
-			<button class="button_form_none header__button-leng header__button-lang--hover" type="button">
-				RU
-
-				<nav class="header-nav__menu">
+		<button class="button_form_none header__button-lang--hover footer__lang_media" type="button">
+			RU
+			<!-- <nav class="header-nav__menu">
 					<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
 						<li class="header-nav__item-button">
 							<a class="button header-lang__link-button" href="">
@@ -1054,222 +1055,36 @@
 								latviešu valoda
 							</a>
 						</li>
-
 					</ul>
-				</nav>
-			</button>
+				</nav> -->
+		</button>
 
-			<p class="text footer__text_media_desktop">
-				Copyright © 2022 Bithoven.com.
-				All rights reserved.
-			</p>
+		<p class="text footer__text_media_desktop">
+			Copyright © 2022 Bithoven.com.
+			All rights reserved.
+		</p>
 
-			<ul class="menu footer__social_media_desktop">
-				<li class="footer__icon footer__icon_net_telegramm">
-					<a class="footer__social-link" href="">
-						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#telegramm"></use>
-						</svg>
-
-						<span class="acces">telegramm</span>
-					</a>
-				</li>
-
-				<li class="footer__icon footer__icon_net_youtube">
-					<a class="footer__social-link" href="">
-						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#youtube"></use>
-						</svg>
-
-						<span class="acces">youtube</span>
-					</a>
-				</li>
-
-				<li class="footer__icon footer__icon_net_inst">
-					<a class="footer__social-link" href="">
-						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#inst"></use>
-						</svg>
-					</a>
-				</li>
-
-				<li class="footer__icon footer__icon_net_facebook">
-					<a class="footer__social-link" href="">
-						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#facebook"></use>
-						</svg>
-					</a>
-				</li>
-
-				<li class="footer__icon footer__icon_net_discord">
-					<a class="footer__social-link" href="">
-						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#discord"></use>
-						</svg>
-					</a>
-				</li>
-			</ul>
-
-			<div class="footer__load_media_desktop">
-				<a class="footer__app-link" href="#">
-					<img class="footer__img" src="assets/images/footer/apple.svg" alt="загрузка в appstore">
-				</a>
-
-				<a class="footer__app-link" href="#">
-					<img class="footer__img" src="assets/images/footer/google.svg" alt="загрузка в googleplay">
-				</a>
-			</div>
-
-		</div>
-		<div class="footer__list">
-			<button class="button button_form_none footer__button" type="button">Discover</button>
-			<ul class="menu footer__menu footer__menu_state_active">
-				<li class="footer__item">
-					<a class="link footer__link" href="#">
-						Темы
-					</a>
-				</li>
-
-				<li class="footer__item">
-					<a class="link footer__link" href="#">
-						Викторины
-					</a>
-				</li>
-
-				<li class="footer__item">
-					<a class="link footer__link" href="#">
-						Глоссарий
-					</a>
-				</li>
-
-				<li class="footer__item">
-					<a class="link footer__link" href="#">
-						Bitcoin Халвинг
-					</a>
-				</li>
-			</ul>
-		</div>
-
-		<div class="footer__list">
-			<button class="button button_form_none footer__button" type="button">Продукт</button>
-			<ul class="menu footer__menu">
-				<li class="footer__item">
-					<a class="link link footer__link" href="#">
-						Биржа
-					</a>
-				</li>
-
-				<li class="footer__item">
-					<a class="link footer__link" href="#">
-						Исследование
-					</a>
-				</li>
-
-				<li class="footer__item">
-					<a class="link footer__link" href="#">
-						Кошелек
-					</a>
-				</li>
-
-				<li class="footer__item">
-					<a class="link footer__link" href="#">
-						Панель запуска
-					</a>
-				</li>
-
-				<li class="footer__item">
-					<a class="link footer__link" href="#">
-						BCF
-					</a>
-				</li>
-
-				<li class="footer__item">
-					<a class="link footer__link" href="#">
-						Lobs
-					</a>
-				</li>
-			</ul>
-		</div>
-
-		<div class="footer__list">
-			<button class="button button_form_none footer__button" type="button">Компания</button>
-			<ul class="menu footer__menu">
-				<li class="footer__item">
-					<a class="link footer__link" href="#">
-						Условия
-					</a>
-				</li>
-
-				<li class="footer__item">
-					<a class="link footer__link" href="#">
-						Политика конфиденциальности
-					</a>
-				</li>
-
-				<li class="footer__item">
-					<a class="link footer__link" href="#">
-						Дисклеймер
-					</a>
-				</li>
-
-				<li class="footer__item">
-					<a class="link footer__link" href="#">
-						Запрос статьи
-					</a>
-				</li>
-
-				<li class="footer__item">
-					<a class="link footer__link" href="#">
-						Обатрая связь
-					</a>
-				</li>
-
-				<li class="footer__item">
-					<a class="link footer__link" href="#">
-						Руководство по переводу
-					</a>
-				</li>
-			</ul>
-		</div>
-
-			<div class="footer__load">
-				<a class="link footer__img-link" href="#">
-					<span class="visually-hidden">appstore</span>
-					<svg class="social__icon-play" width="113" height="30" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#apple"></use>
-					</svg>
-				</a>
-
-				<a class="link footer__img-link" href="#">
-					<span class="visually-hidden">googleplay</span>
-					<svg class="social__icon-play" width="119" height="30" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#google"></use>
-					</svg>
-				</a>
-			</div>
-
-		<ul class="menu footer__social">
+		<ul class="menu footer__social_media_desktop">
 			<li class="footer__icon footer__icon_net_telegramm">
 				<a class="footer__social-link" href="">
-					<span class="visually-hidden">telegramm</span>
 					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#telegramm"></use>
 					</svg>
+					<span class="acces">telegramm</span>
 				</a>
 			</li>
 
 			<li class="footer__icon footer__icon_net_youtube">
 				<a class="footer__social-link" href="">
-					<span class="visually-hidden">youtube</span>
 					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#youtube"></use>
 					</svg>
+					<span class="acces">youtube</span>
 				</a>
 			</li>
 
 			<li class="footer__icon footer__icon_net_inst">
 				<a class="footer__social-link" href="">
-					<span class="visually-hidden">instagram</span>
 					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#inst"></use>
 					</svg>
@@ -1278,7 +1093,6 @@
 
 			<li class="footer__icon footer__icon_net_facebook">
 				<a class="footer__social-link" href="">
-					<span class="visually-hidden">facebook</span>
 					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#facebook"></use>
 					</svg>
@@ -1287,7 +1101,6 @@
 
 			<li class="footer__icon footer__icon_net_discord">
 				<a class="footer__social-link" href="">
-					<span class="visually-hidden">discord</span>
 					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#discord"></use>
 					</svg>
@@ -1295,12 +1108,205 @@
 			</li>
 		</ul>
 
-		<p class="text footer__text_size_smal">
-			Copyright © 2022 Bithoven.com.
-			All rights reserved.
-		</p>
-		</а>
-	</footer>
+		<div class="footer__load_media_desktop">
+			<a class="link footer__img-link" href="#">
+				<span class="visually-hidden">appstore</span>
+				<svg class="social__icon-play" width="113" height="30" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#apple"></use>
+				</svg> </a>
+
+			<a class="link footer__img-link" href="#">
+				<span class="visually-hidden">googleplay</span>
+				<svg class="social__icon-play" width="119" height="30" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#google"></use>
+				</svg> </a>
+		</div>
+	</div>
+
+	<div class="footer__list">
+		<button class="button button_form_none footer__button" type="button">Discover</button>
+		<ul class="menu footer__menu footer__menu_state_active">
+			<li class="footer__item">
+				<a class="link footer__link" href="#">
+					Темы
+				</a>
+			</li>
+
+			<li class="footer__item">
+				<a class="link footer__link" href="#">
+					Викторины
+				</a>
+			</li>
+
+			<li class="footer__item">
+				<a class="link footer__link" href="#">
+					Глоссарий
+				</a>
+			</li>
+
+			<li class="footer__item">
+				<a class="link footer__link" href="#">
+					Bitcoin Халвинг
+				</a>
+			</li>
+		</ul>
+	</div>
+
+	<div class="footer__list">
+		<button class="button button_form_none footer__button" type="button">Продукт</button>
+		<ul class="menu footer__menu">
+			<li class="footer__item">
+				<a class="link link footer__link" href="#">
+					Биржа
+				</a>
+			</li>
+
+			<li class="footer__item">
+				<a class="link footer__link" href="#">
+					Исследование
+				</a>
+			</li>
+
+			<li class="footer__item">
+				<a class="link footer__link" href="#">
+					Кошелек
+				</a>
+			</li>
+
+			<li class="footer__item">
+				<a class="link footer__link" href="#">
+					Панель запуска
+				</a>
+			</li>
+
+			<li class="footer__item">
+				<a class="link footer__link" href="#">
+					BCF
+				</a>
+			</li>
+
+			<li class="footer__item">
+				<a class="link footer__link" href="#">
+					Lobs
+				</a>
+			</li>
+		</ul>
+	</div>
+
+	<div class="footer__list">
+		<button class="button button_form_none footer__button" type="button">Компания</button>
+		<ul class="menu footer__menu">
+			<li class="footer__item">
+				<a class="link footer__link" href="#">
+					Условия
+				</a>
+			</li>
+
+			<li class="footer__item">
+				<a class="link footer__link" href="#">
+					Политика конфиденциальности
+				</a>
+			</li>
+
+			<li class="footer__item">
+				<a class="link footer__link" href="#">
+					Дисклеймер
+				</a>
+			</li>
+
+			<li class="footer__item">
+				<a class="link footer__link" href="#">
+					Запрос статьи
+				</a>
+			</li>
+
+			<li class="footer__item">
+				<a class="link footer__link" href="#">
+					Обатрая связь
+				</a>
+			</li>
+
+			<li class="footer__item">
+				<a class="link footer__link" href="#">
+					Руководство по переводу
+				</a>
+			</li>
+		</ul>
+	</div>
+
+	<div class="footer__load">
+		<a class="link footer__img-link" href="#">
+			<span class="visually-hidden">appstore</span>
+			<svg class="social__icon-play" width="113" height="30" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#apple"></use>
+			</svg>
+		</a>
+
+		<a class="link footer__img-link" href="#">
+			<span class="visually-hidden">googleplay</span>
+			<svg class="social__icon-play" width="119" height="30" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#google"></use>
+			</svg>
+		</a>
+	</div>
+
+	<ul class="menu footer__social">
+		<li class="footer__icon footer__icon_net_telegramm">
+			<a class="footer__social-link" href="">
+				<span class="visually-hidden">telegramm</span>
+				<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#telegramm"></use>
+				</svg>
+			</a>
+		</li>
+
+		<li class="footer__icon footer__icon_net_youtube">
+			<a class="footer__social-link" href="">
+				<span class="visually-hidden">youtube</span>
+				<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#youtube"></use>
+				</svg>
+			</a>
+		</li>
+
+		<li class="footer__icon footer__icon_net_inst">
+			<a class="footer__social-link" href="">
+				<span class="visually-hidden">instagram</span>
+				<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#inst"></use>
+				</svg>
+			</a>
+		</li>
+
+		<li class="footer__icon footer__icon_net_facebook">
+			<a class="footer__social-link" href="">
+				<span class="visually-hidden">facebook</span>
+				<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#facebook"></use>
+				</svg>
+			</a>
+		</li>
+
+		<li class="footer__icon footer__icon_net_discord">
+			<a class="footer__social-link" href="">
+				<span class="visually-hidden">discord</span>
+				<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#discord"></use>
+				</svg>
+			</a>
+		</li>
+	</ul>
+
+	<p class="text footer__text_size_smal">
+		Copyright © 2022 Bithoven.com.
+		All rights reserved.
+	</p>
+
+	</а>
+</footer>
+
+
+
 	<script src="assets/scripts/article.js"></script>
 	<script src="assets/scripts/index.js"></script>
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
