--- a/source/markup/education.html
+++ b/source/markup/education.html
@@ -488,6 +488,180 @@
 
 	</header>
 
+	<article class="filter education__filter container">
+		<nav aria-label="Breadcrumb" class="content__top breadcrumb">
+			<ol class="menu breadcrumb__menu">
+				<li class="breadcrumb__item">
+					<a class="link content_link" href="#"> Главная </a>
+				</li>
+				<li class="breadcrumb__item">
+					<span aria-current="page">Статьи</span>
+				</li>
+			</ol>
+			<a class="breadcrumb__back" href="#">
+				<svg class="breadcrumb__svg" width="7" height="10" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#armob"></use>
+				</svg>
+			</a>
+		</nav>
+
+		<h2 class="text education__title">
+			Навигация
+		</h2>
+		<div class="filter__inner">
+			<div class="filter__top-inner">
+				<div class="filter__top">
+					<a class="button button_form_clear filter__button" href="">
+						Образовательные статьи
+					</a>
+					<a class="button button_form_none" href="">
+						Новостные статьи
+					</a>
+				</div>
+				<div class="filter__all">
+					<a class="button filter__button-link filter__button-link_state_ok" href="">
+						Altcoin ✓
+					</a>
+					<a class="button filter__button-link" href="">
+						Binance +
+					</a>
+					<a class="button filter__button-link" href="">
+						Биткоин +
+					</a>
+					<a class="button filter__button-link" href="">
+						Блокчейн +
+					</a>
+					<a class="button filter__button-link filter__button-link filter__button-link_state_ok" href="">
+						Консенсус ✓
+					</a>
+					<a class="button filter__button-link" href="">
+						DeFi +
+					</a>
+					<a class="button filter__button-link" href="">
+						Технический анализ +
+					</a>
+					<a class="button filter__button-link" href="">
+						Еще+12
+					</a>
+					<div class="filter__all-desktop">
+						<a class="button filter__button-link" href="">
+							Технологии ✓
+						</a>
+						<a class="button filter__button-link" href="">
+							Технический анализ +
+						</a>
+						<a class="button filter__button-link" href="">
+							Криптография +
+						</a>
+						<a class="button filter__button-link" href="">
+							Экономика +
+						</a>
+						<a class="button filter__button-link" href="">
+							Торговля ✓
+						</a>
+						<a class="button filter__button-link" href="">
+							Ethereum +
+						</a>
+						<a class="button filter__button-link" href="">
+							Приватность +
+						</a>
+						<a class="button filter__button-link" href="">
+							Майнинг +
+						</a>
+						<a class="button filter__button-link" href="">
+							Metaverse +
+						</a>
+						<a class="button filter__button-link" href="">
+							История +
+						</a>
+						<a class="button filter__button-link" href="">
+							Консенсус +
+						</a>
+						<a class="button filter__button-link" href="">
+							Основы +
+						</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="filter__level-inner">
+				<div class="filter__level">
+					<h2 class="text">
+						Уровень
+					</h2>
+					<div class="filter__level-wrap">
+						<a class="link link_level_new" href="#">
+							Новичек
+						</a>
+						<a class="link link_level_advanced" href="#">
+							Продвинутый +
+						</a>
+						<a class="link link_level_pro" href="#">
+							Профессионал +
+						</a>
+					</div>
+				</div>
+				<h2 class="text">
+					Время прочтения
+				</h2>
+				<div class="filter__time">
+					<div class="filter__time-scrol">
+						<button class="button_form_none header__button-bottom header__button_type_search filter__circle-left"
+							type="button">
+							<svg class="header__svg" width="25" height="26" aria-hidden="true" focusable="false">
+								<use href="assets/images/svg/sprite.svg#circle"></use>
+							</svg>
+						</button>
+						<div class="filter__clock">
+							<span class="filter__clockfilter__clockspan1"> 1m </span>
+							<span class="filter__clock--span1 filter__clock--span2"> 3m </span>
+							<span class="filter__clock--span1 filter__clock--span3"> 5m </span>
+						</div>
+						<span class="filter__clock--span1 filter__clock--span4"> 10m </span>
+						<span class="filter__clock--span1 filter__clock--span5"> 15m </span>
+						<span class="filter__clock--span1 filter__clock--span6"> 20m </span>
+						<span class="filter__clock--span1 sfilter__clock--pan7"> ∞ </span>
+					</div>
+					<button class="button_form_none header__button-bottom header__button_type_search filter__circle-rights"
+						type="button">
+						<svg class="header__svg" width="25" height="26" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#circle"></use>
+						</svg>
+					</button>
+				</div>
+			</div>
+		</div>
+	</article>
+
+	<div class="filter__bottom">
+		<div class="filter__bottom-inner container">
+			<div class="filter__button-wrap">
+				<button class="button_form_none filter__bottom-deck filter__bottom-button filter__button-sort" type="button">
+					<span class="filter__menu-span filter__button-none ">
+						Сортировка
+					</span>
+					<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#deck"></use>
+					</svg>
+				</button>
+				<button class="button_form_none filter__button-menu" type="button">
+					<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#menuFilter"></use>
+					</svg>
+				</button>
+			</div>
+			<button class="button_form_none filter__bottom-button" type="button">
+				Применить
+			</button>
+			<button class="button_form_none filter__button-clear filter__bottom-button" type="button">
+				Очистить
+			</button>
+			<button class="button_form_none filter__bottom-button filter__button-none filter__button-hide" type="button">
+				Скрыть фильтр
+			</button>
+		</div>
+	</div>
+
 	<section class="education container">
 		<h2 class="text education__title">
 			Статьи
@@ -657,7 +831,7 @@
 					</div>
 					<h2 class="text education__title">
 						<a class="link" href="">
-						Полное руководство по торговле криптовалютой для начинающих
+							Полное руководство по торговле криптовалютой для начинающих
 						</a>
 					</h2>
 					<p class="text">
@@ -695,7 +869,7 @@
 					</div>
 					<h2 class="text education__title">
 						<a class="link" href="">
-						Полное руководство по торговле криптовалютой для начинающих
+							Полное руководство по торговле криптовалютой для начинающих
 						</a>
 					</h2>
 					<p class="text">
@@ -733,7 +907,7 @@
 					</div>
 					<h2 class="text education__title">
 						<a class="link" href="">
-						Полное руководство по торговле криптовалютой для начинающих
+							Полное руководство по торговле криптовалютой для начинающих
 						</a>
 					</h2>
 					<p class="text">
@@ -787,24 +961,27 @@
 					</li>
 				</ul>
 				<button class="button button_form_none" type="button">
-				<svg width="6" height="9" aria-hidden="true" focusable="false">
-					<use href="assets/images/svg/sprite.svg#right"></use>
-				</svg>
+					<svg width="6" height="9" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#right"></use>
+					</svg>
 				</button>
 			</nav>
 	</section>
 
 	<footer class="footer container">
 		<div class="footer__top">
-
 			<a class="link logotype" width="126" height="53" href="#главная">
 				<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
 			</a>
 
+			<p class="text footer__text--smal">
+				Copyright © 2022 Bithoven.com.
+				All rights reserved.
+			</p>
+
 			<button class="button_form_none header__button-lang--hover footer__lang_media" type="button">
 				RU
-
-				<nav class="header-nav__menu">
+				<!-- <nav class="header-nav__menu">
 					<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
 						<li class="header-nav__item-button">
 							<a class="button header-lang__link-button" href="">
@@ -898,9 +1075,8 @@
 								latviešu valoda
 							</a>
 						</li>
-
 					</ul>
-				</nav>
+				</nav> -->
 			</button>
 
 			<p class="text footer__text_media_desktop">
@@ -953,15 +1129,20 @@
 			</ul>
 
 			<div class="footer__load_media_desktop">
-				<a class="footer__app-link" href="#">
-					<img class="footer__img" src="assets/images/footer/apple.svg" alt="загрузка в appstore">
-				</a>
+				<a class="link footer__img-link" href="#">
+					<span class="visually-hidden">appstore</span>
+					<svg class="social__icon-play" width="113" height="30" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#apple"></use>
+					</svg> </a>
 
-				<a class="footer__app-link" href="#">
-					<img class="footer__img" src="assets/images/footer/google.svg" alt="загрузка в googleplay">
-				</a>
+				<a class="link footer__img-link" href="#">
+					<span class="visually-hidden">googleplay</span>
+					<svg class="social__icon-play" width="119" height="30" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#google"></use>
+					</svg> </a>
 			</div>
 		</div>
+
 		<div class="footer__list">
 			<button class="button button_form_none footer__button" type="button">Discover</button>
 			<ul class="menu footer__menu footer__menu_state_active">
@@ -1140,11 +1321,12 @@
 			Copyright © 2022 Bithoven.com.
 			All rights reserved.
 		</p>
+
 		</а>
 	</footer>
 
-		<script src="assets/scripts/index.js"></script>
-		<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+	<script src="assets/scripts/index.js"></script>
+	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
 
 </html>
