--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -488,8 +488,6 @@
 	</header>
 
 	<article class="filter education__filter container">
-
-
 		<nav aria-label="Breadcrumb" class="content__top breadcrumb">
 			<ol class="menu breadcrumb__menu">
 				<li class="breadcrumb__item">
@@ -515,45 +513,35 @@
 					<a class="button button_form_clear filter__button" href="">
 						Образовательные статьи
 					</a>
-
 					<a class="button button_form_none" href="">
 						Новостные статьи
 					</a>
 				</div>
-
 				<div class="filter__all">
 					<a class="button filter__button-link filter__button-link_state_ok" href="">
 						Altcoin ✓
 					</a>
-
 					<a class="button filter__button-link" href="">
 						Binance +
 					</a>
-
 					<a class="button filter__button-link" href="">
 						Биткоин +
 					</a>
-
 					<a class="button filter__button-link" href="">
 						Блокчейн +
 					</a>
-
 					<a class="button filter__button-link filter__button-link filter__button-link_state_ok" href="">
 						Консенсус ✓
 					</a>
-
 					<a class="button filter__button-link" href="">
 						DeFi +
 					</a>
-
 					<a class="button filter__button-link" href="">
 						Технический анализ +
 					</a>
-
 					<a class="button filter__button-link" href="">
 						Еще+12
 					</a>
-
 					<div class="filter__all-desktop">
 						<a class="button filter__button-link" href="">
 							Технологии ✓
@@ -600,7 +588,6 @@
 					<h2 class="text">
 						Уровень
 					</h2>
-
 					<div class="filter__level-wrap">
 						<a class="link link_level_new" href="#">
 							Новичек
@@ -613,11 +600,9 @@
 						</a>
 					</div>
 				</div>
-
 				<h2 class="text">
 					Время прочтения
 				</h2>
-
 				<div class="filter__time">
 					<div class="filter__time-scrol">
 						<button class="button_form_none header__button-bottom header__button_type_search filter__circle-left"
@@ -626,8 +611,6 @@
 								<use href="assets/images/svg/sprite.svg#circle"></use>
 							</svg>
 						</button>
-
-
 						<div class="filter__clock">
 							<span class="filter__clockfilter__clockspan1"> 1m </span>
 							<span class="filter__clock--span1 filter__clock--span2"> 3m </span>
@@ -638,7 +621,6 @@
 						<span class="filter__clock--span1 filter__clock--span6"> 20m </span>
 						<span class="filter__clock--span1 sfilter__clock--pan7"> ∞ </span>
 					</div>
-
 					<button class="button_form_none header__button-bottom header__button_type_search filter__circle-rights"
 						type="button">
 						<svg class="header__svg" width="25" height="26" aria-hidden="true" focusable="false">
@@ -653,31 +635,27 @@
 	<div class="filter__bottom">
 		<div class="filter__bottom-inner container">
 			<div class="filter__button-wrap">
-				<button class="button_form_none filter__bottom-deck filter__bottom-button" type="button">
-					<span class="filter__menu-span filter__button-none">
+				<button class="button_form_none filter__bottom-deck filter__bottom-button filter__button-sort" type="button">
+					<span class="filter__menu-span filter__button-none ">
 						Сортировка
 					</span>
 					<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#deck"></use>
 					</svg>
 				</button>
-
 				<button class="button_form_none filter__button-menu" type="button">
 					<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#menuFilter"></use>
 					</svg>
 				</button>
 			</div>
-
 			<button class="button_form_none filter__bottom-button" type="button">
 				Применить
 			</button>
-
 			<button class="button_form_none filter__button-clear filter__bottom-button" type="button">
 				Очистить
 			</button>
-
-			<button class="button_form_none filter__bottom-button filter__button-none" type="button">
+			<button class="button_form_none filter__bottom-button filter__button-none filter__button-hide" type="button">
 				Скрыть фильтр
 			</button>
 		</div>
