--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -1075,16 +1075,18 @@
 
 	<footer class="footer container">
 		<div class="footer__top">
-
 			<a class="link logotype" width="126" height="53" href="#главная">
 				<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
 			</a>
 
-			<button class="button_form_none header__button-leng header__button-lang--hover footer__lang_media_desktop"
-				type="button">
-				RU
+			<p class="text footer__text--smal">
+				Copyright © 2022 Bithoven.com.
+				All rights reserved.
+			</p>
 
-				<nav class="header-nav__menu">
+			<button class="button_form_none header__button-lang--hover footer__lang_media" type="button">
+				RU
+				<!-- <nav class="header-nav__menu">
 					<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
 						<li class="header-nav__item-button">
 							<a class="button header-lang__link-button" href="">
@@ -1178,9 +1180,8 @@
 								latviešu valoda
 							</a>
 						</li>
-
 					</ul>
-				</nav>
+				</nav> -->
 			</button>
 
 			<p class="text footer__text_media_desktop">
@@ -1188,26 +1189,68 @@
 				All rights reserved.
 			</p>
 
-			<div class="footer__social_media_desktop">
-				<div class="footer__icon footer__icon_net_telegramm"> </div>
+			<ul class="menu footer__social_media_desktop">
+				<li class="footer__icon footer__icon_net_telegramm">
+					<a class="footer__social-link" href="">
+						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#telegramm"></use>
+						</svg>
+						<span class="acces">telegramm</span>
+					</a>
+				</li>
 
-				<div class="footer__icon footer__icon_net_youtube"> </div>
+				<li class="footer__icon footer__icon_net_youtube">
+					<a class="footer__social-link" href="">
+						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#youtube"></use>
+						</svg>
+						<span class="acces">youtube</span>
+					</a>
+				</li>
 
-				<div class="footer__icon footer__icon_net_inst"> </div>
+				<li class="footer__icon footer__icon_net_inst">
+					<a class="footer__social-link" href="">
+						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#inst"></use>
+						</svg>
+					</a>
+				</li>
 
-				<div class="footer__icon footer__icon_net_facebook"> </div>
+				<li class="footer__icon footer__icon_net_facebook">
+					<a class="footer__social-link" href="">
+						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#facebook"></use>
+						</svg>
+					</a>
+				</li>
 
-				<div class="footer__icon footer__icon_net_discord"> </div>
-			</div>
+				<li class="footer__icon footer__icon_net_discord">
+					<a class="footer__social-link" href="">
+						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#discord"></use>
+						</svg>
+					</a>
+				</li>
+			</ul>
 
 			<div class="footer__load_media_desktop">
-				<img class="footer__img" src="assets/images/footer/appstore.png" alt="appstore">
-				<img class="footer__img" src="assets/images/footer/googleplay.png" alt="googleplay">
+				<a class="link footer__img-link" href="#">
+					<span class="visually-hidden">appstore</span>
+					<svg class="social__icon-play" width="113" height="30" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#apple"></use>
+					</svg> </a>
+
+				<a class="link footer__img-link" href="#">
+					<span class="visually-hidden">googleplay</span>
+					<svg class="social__icon-play" width="119" height="30" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#google"></use>
+					</svg> </a>
 			</div>
 		</div>
+
 		<div class="footer__list">
-			<button class="button button_form_none footer__button" type="button">Discover</button>
-			<ul class="menu footer__menu footer__menu_state_active">
+			<button class="button button_form_none footer__button footer__button--disc" type="button">Discover</button>
+			<ul class="menu footer__menu footer__menu--disc">
 				<li class="footer__item">
 					<a class="link footer__link" href="#">
 						Темы
@@ -1235,8 +1278,8 @@
 		</div>
 
 		<div class="footer__list">
-			<button class="button button_form_none footer__button" type="button">Продукт</button>
-			<ul class="menu footer__menu">
+			<button class="button button_form_none footer__button footer__button--prod" type="button">Продукт</button>
+			<ul class="menu footer__menu footer__menu--prod">
 				<li class="footer__item">
 					<a class="link link footer__link" href="#">
 						Биржа
@@ -1276,8 +1319,8 @@
 		</div>
 
 		<div class="footer__list">
-			<button class="button button_form_none footer__button" type="button">Компания</button>
-			<ul class="menu footer__menu">
+			<button class="button button_form_none footer__button footer__button--comp" type="button">Компания</button>
+			<ul class="menu footer__menu footer__menu--comp">
 				<li class="footer__item">
 					<a class="link footer__link" href="#">
 						Условия
@@ -1317,8 +1360,19 @@
 		</div>
 
 		<div class="footer__load">
-			<img class="footer__img" src="assets/images/footer/appstore.png" alt="appstore">
-			<img class="footer__img" src="assets/images/footer/googleplay.png" alt="googleplay">
+			<a class="link footer__img-link" href="#">
+				<span class="visually-hidden">appstore</span>
+				<svg class="social__icon-play" width="113" height="30" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#apple"></use>
+				</svg>
+			</a>
+
+			<a class="link footer__img-link" href="#">
+				<span class="visually-hidden">googleplay</span>
+				<svg class="social__icon-play" width="119" height="30" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#google"></use>
+				</svg>
+			</a>
 		</div>
 
 		<ul class="menu footer__social">
@@ -1372,9 +1426,13 @@
 			Copyright © 2022 Bithoven.com.
 			All rights reserved.
 		</p>
+
 		</а>
-		<script src="assets/scripts/index.js"></script>
-		<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+	</footer>
+
+	<script src="assets/scripts/footer.js"></script>
+	<script src="assets/scripts/index.js"></script>
+	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
 
 </html>
