main page mobile end

--- a/source/markup/glossary.html
+++ b/source/markup/glossary.html
@@ -506,11 +506,12 @@
 		<nav class="glossary__nav">
 			<div class="glossary__nav-wrap container">
 				<div class="glossary__search">
+
 					<form action="" class="glossary__form" method="post">
 						<input class="glossary__input" type="text" name="text" placeholder="Поиск по глоссарию" value=""
 							id="glossarySearch">
 
-						<button type="button" class="button_form_none glossary__form-button" type="button" name="button">
+						<button class="button_form_none glossary__form-button" type="button" name="button">
 							<svg class="form__form-of" width="17" height="17" aria-hidden="true" focusable="false">
 								<use href="assets/images/svg/sprite.svg#searglos"></use>
 							</svg>
@@ -736,28 +737,8 @@
 
 				<div class="text glossary__text glossary__text--non">
 					<p class="text">
-						Active management (or active investing) refers to a strategy deployed by fund managers or brokers where they
-						trade financial assets aiming to profit from both bull and bear markets. Typically, active managers seek
-						market inefficiencies, hoping that their positions reach a target return or outperform a particular index,
-						such as the S&P500.On an individual level, active management is simply the act of buying and selling assets
-						frequently, based on seemingly good market opportunities that arise. On a broader context, however, active
-						management relates to a group of managers or brokers that try to make profits by trading a select group of
-						assets.
-					</p>
-
-					<p class="text">
 						Also known as a Majority Attack. When one or a group of miners control greater than 50% of the network's
 						mining hashrate or computational power.
-					</p>
-
-					<p class="text">
-						Active management (or active investing) refers to a strategy deployed by fund managers or brokers where they
-						trade financial assets aiming to profit from both bull and bear markets. Typically, active managers seek
-						market inefficiencies, hoping that their positions reach a target return or outperform a particular index,
-						such as the S&P500. On an individual level, active management is simply the act of buying and selling assets
-						frequently, based on seemingly good market opportunities that arise. On a broader context, however, active
-						management relates to a group of managers or brokers that try to make profits by trading a select group of
-						assets.
 					</p>
 
 					<p class="text">
