main desktop end

--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -508,16 +508,16 @@
 				<div class="swiper-slide">
 					<div class="main-card">
 						<div class="link main-card__img slide__img--slide" href="#">
-							<div class="main-card__img-link">
+							<div class="main-card__img-link slide__img-link">
 								<a class="button main-card__button" href="">
 									Основы
 								</a>
 							</div>
-							<h2 class="title main-card__title">
+							<h2 class="title main-card__title slider__main-card-title">
 								Что такое метавселенная?
 							</h2>
 						</div>
-						<div class="main-card__info">
+						<div class="main-card__info slide__info">
 							<p class="text main-card__time">
 								4 минуты
 							</p>
@@ -528,56 +528,55 @@
 					</div>
 				</div>
 
-				<div class="swiper-slide">
-					<div class="main-card">
-						<div class="link main-card__img slide__img--slide" href="#">
-							<div class="main-card__img-link">
-								<a class="button main-card__button" href="">
-									Основы
-								</a>
-							</div>
-							<h2 class="title main-card__title">
-								Что такое метавселенная?
-							</h2>
-						</div>
-						<div class="main-card__info">
-							<p class="text main-card__time">
-								4 минуты
-							</p>
-							<a class="link link_level_new" href="#">
-								Новичок
-							</a>
-						</div>
+		<div class="swiper-slide">
+			<div class="main-card">
+				<div class="link main-card__img slide__img--slide" href="#">
+					<div class="main-card__img-link slide__img-link">
+						<a class="button main-card__button" href="">
+							Основы
+						</a>
 					</div>
+					<h2 class="title main-card__title slider__main-card-title">
+						Что1 такое метавселенная?
+					</h2>
 				</div>
-
-				<div class="swiper-slide">
-					<div class="main-card">
-						<div class="link main-card__img slide__img--slide" href="#">
-							<div class="main-card__img-link">
-								<a class="button main-card__button" href="">
-									Основы
-								</a>
-							</div>
-							<h2 class="title main-card__title">
-								Что такое метавселенная?
-							</h2>
-						</div>
-						<div class="main-card__info">
-							<p class="text main-card__time">
-								4 минуты
-							</p>
-							<a class="link link_level_new" href="#">
-								Новичок
-							</a>
-						</div>
-					</div>
+				<div class="main-card__info slide__info">
+					<p class="text main-card__time">
+						4 минуты
+					</p>
+					<a class="link link_level_new" href="#">
+						Новичок
+					</a>
 				</div>
 			</div>
+		</div>
+
+		<div class="swiper-slide">
+			<div class="main-card">
+				<div class="link main-card__img slide__img--slide" href="#">
+					<div class="main-card__img-link slide__img-link">
+						<a class="button main-card__button" href="">
+							Основы
+						</a>
+					</div>
+					<h2 class="title main-card__title slider__main-card-title">
+						Что такое метавселенная?
+					</h2>
+				</div>
+				<div class="main-card__info slide__info">
+					<p class="text main-card__time">
+						4 минуты
+					</p>
+					<a class="link link_level_new" href="#">
+						Новичок
+					</a>
+				</div>
+			</div>
+		</div>
 
 			<!-- If we need navigation buttons -->
-			<!-- <div class="swiper-button-prev"></div>
-			<div class="swiper-button-next"></div> -->
+			<div class="swiper-button-prev"></div>
+			<div class="swiper-button-next"></div>
 
 			<!-- If we need scrollbar -->
 			<!-- <div class="swiper-scrollbar"></div> -->
@@ -596,10 +595,9 @@
 			</div>
 
 			<div class="last__content-top">
-
-				<div class="main-card last__main-card">
-					<div class="main-card__img last__img--balanse">
-						<div class="main-card__link">
+				<div class="main-card last__main-card item1">
+					<div class="main-card__img last__main-card-img last__img--balanse">
+						<div class="main-card__link last__main-card-link">
 							<a class="button main-card__button" href="#">
 								Торговля
 							</a>
@@ -620,9 +618,9 @@
 					</h2>
 				</div>
 
-				<div class="main-card">
-					<div class="main-card__img last__img--porto">
-						<div class="main-card__link">
+				<div class="main-card item2">
+					<div class="main-card__img last__main-card-img last__img--porto">
+						<div class="main-card__link last__main-card-link">
 							<a class="button main-card__button" href="#">
 								Altcoin
 							</a>
@@ -647,7 +645,7 @@
 					</h2>
 				</div>
 
-				<div class="main-card">
+				<div class="main-card item3">
 					<div class="main-card__link">
 						<a class="button main-card__button" href="#">
 							Глоссарий
@@ -658,16 +656,16 @@
 						Protocol (POAP)
 					</h2>
 					<p class="text main-card__text">
-						Система стейкинга NFT-keys, что делает обладателей ключей не только ценными членами сообщества, но и
-						инвесторами
-						на самой ранней стадии
+					Протокол, который создает цифровые значки или предметы коллекционирования с использованием технологии блокчейн.
+					В то время как аббревиатура происходит от названия протокола, POAP также используется для описания самих предметов
+					коллекционирования.
 					</p>
 					<a class="link main-card__link-btn" href="">
 						Полное определение
 					</a>
 				</div>
 
-				<div class="main-card">
+				<div class="main-card item4">
 					<div class="main-card__link">
 						<a class="button main-card__button" href="#">
 							Altcoin
@@ -689,7 +687,7 @@
 					</div>
 				</div>
 
-				<div class="main-card">
+				<div class="main-card item5">
 					<div class="main-card__link">
 						<a class="button main-card__button" href="#">
 							Binance
@@ -813,7 +811,7 @@
 
 			<div class="popular__content">
 
-				<div class="main-card">
+				<div class="main-card popular__grid-item1">
 					<div class="main-card__link">
 						<a class="button main-card__button" href="#">
 							Торговля
@@ -841,7 +839,7 @@
 					</div>
 				</div>
 
-				<div class="main-card">
+				<div class="main-card popular__grid-item2">
 					<div class="main-card__info">
 						<p class="text main-card__time">
 							4 минуты
@@ -854,7 +852,7 @@
 						12 популярных свечных моделей и паттернов, используемых в техническом анализе
 					</h2>
 					<div class="main-card__img popular__img--binance">
-						<div class="main-card__link">
+						<div class="main-card__link popular__main-card-link">
 							<a class="button main-card__button" href="#">
 								Торговля
 							</a>
@@ -868,7 +866,7 @@
 					</div>
 				</div>
 
-				<div class="main-card">
+				<div class="main-card popular__grid-item3">
 					<div class="main-card__info">
 						<p class="text main-card__time">
 							4 минуты
@@ -881,7 +879,7 @@
 						Как начать работу с Binance Smart за 60 секунд
 					</h2>
 					<div class="main-card__img popular__img--mean">
-						<div class="main-card__link">
+						<div class="main-card__link  popular__main-card-link">
 							<a class="button main-card__button" href="#">
 								Торговля
 							</a>
@@ -895,7 +893,7 @@
 					</div>
 				</div>
 
-				<div class="main-card">
+				<div class="main-card popular__grid-item4">
 					<div class="main-card__link">
 						<a class="button main-card__button" href="#">
 							Binance
@@ -914,8 +912,8 @@
 					</div>
 				</div>
 
-				<div class="main-card">
-					<div class="main-card__info">
+				<div class="main-card popular__grid-item5">
+					<div class="main-card__info popular__main-card-info">
 						<p class="text main-card__time">
 							4 минуты
 						</p>
@@ -923,11 +921,12 @@
 							Новичек
 						</a>
 					</div>
-					<h2 class="title main-card__title">
+					<h2 class="title main-card__title popular__main-card-title">
 						История цен биткоина
 					</h2>
+
 					<div class="main-card__img popular__img--btc">
-						<div class="main-card__link">
+						<div class="main-card__link popular__main-card-link--end">
 							<a class="button main-card__button" href="#">
 								Торговля
 							</a>
@@ -983,12 +982,12 @@
 			<div class="study__content">
 
 
-				<div class="main-card">
+				<div class="main-card study__main-card">
 					<h2 class="title study-main-card__title">
 						Что ищем?
 					</h2>
 					<form action="" class="glossary__form study__form" method="post">
-						<input class="glossary__input" type="text" name="text" placeholder="Поиск по глоссарию" value=""
+						<input class="glossary__input study__input" type="text" name="text" placeholder="Поиск по глоссарию" value=""
 							id="glossarySearch">
 						<button class="button_form_none glossary__form-button study__form-button" type="button" name="button">
 							<svg class="form__form-of" width="17" height="17" aria-hidden="true" focusable="false">
@@ -1007,7 +1006,7 @@
 					</a>
 				</div>
 
-				<div class="main-card">
+				<div class="main-card study__main-card">
 					<div class="main-card__link">
 						<a class="button main-card__button" href="#">
 							Глоссарий
@@ -1027,7 +1026,7 @@
 					</a>
 				</div>
 
-				<div class="main-card">
+				<div class="main-card study__main-card">
 					<div class="main-card__link">
 						<a class="button main-card__button" href="#">
 							Глоссарий
